[project]
name = "motw-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["ruff>=0.9.3"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "A", "PLC", "PLE", "PLR", "PLW", "I", "ERA"]
